PB-17154 - UAT: On firefox, fix the height of the input number in-field in user directory

--- a/src/less/base/form/input-text.less
+++ b/src/less/base/form/input-text.less
@@ -82,6 +82,7 @@ input[type=number] {
   &.in-field {
     background: @input-infield-background;
     box-shadow: inset 0 0 0 .1rem @input-infield-border;
+    height: 3rem; // Fix the height of the input on firefox
     margin-bottom: 0;
 
     // Fields hover
